# jut

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jut/: __init__.py  cli.py
tests/: __init__.py  test1_all.ipynb
tests/integration/: test_cli.py
tests/unit/: test_jut.py
