[tool.poetry]
name = "jut"
version = "0.0.24"
description = "Render Jupyter Notebook in the terminal"
authors = ["kracekumar <me@kracekumar.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kracekumar/jut/"
include=[
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.1"
nbformat = "5.1.2"
click = "7.1.2"
rich = "9.13.0"
pydantic = "1.8.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
parameterized = "^0.8.1"
jupyter = "^1.0.0"
pytest-cov = "^2.11.1"
pre-commit = "^2.11.1"
mypy = "^0.812"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jut = "jut.cli:main"

